force-app/main/default/objects/vlocity_ps__ProductChildItem__c/fields/vlocity_ps__ChildProductName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ChildProductName__c</fullName>
    <formula>vlocity_ps__ChildProductId__r.Name</formula>
    <label>Child Product Name</label>
    <type>Text</type>
</CustomField>