force-app/main/default/objects/vlocity_ps__ProductChildItem__c/fields/vlocity_ps__IsOverride__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Override</label>
    <type>Checkbox</type>
</CustomField>