force-app/main/default/objects/vlocity_ps__ProductChildItem__c/fields/vlocity_ps__IsVirtualItem__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsVirtualItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virtual Item</label>
    <type>Checkbox</type>
</CustomField>