force-app/main/default/objects/vlocity_ps__ProductChildItem__c/fields/vlocity_ps__MaximumChildItemQuantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MaximumChildItemQuantity__c</fullName>
    <defaultValue>99999</defaultValue>
    <label>Max Children Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>