force-app/main/default/objects/vlocity_ps__ProductChildItem__c/fields/vlocity_ps__MinimumChildItemQuantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MinimumChildItemQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Min Children Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>