force-app/main/default/objects/vlocity_ps__ProductChildItem__c/fields/vlocity_ps__MinMaxDefaultQty__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MinMaxDefaultQty__c</fullName>
    <formula>TEXT(vlocity_ps__MinQuantity__c) &amp; &quot;, &quot; &amp; TEXT(vlocity_ps__MaxQuantity__c) &amp; &quot;, &quot; &amp; TEXT(vlocity_ps__Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min, Max, Default</label>
    <type>Text</type>
</CustomField>