force-app/main/default/objects/vlocity_ps__ProductChildItem__c/fields/vlocity_ps__ParentProductName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ParentProductName__c</fullName>
    <formula>vlocity_ps__ParentProductId__r.Name</formula>
    <label>Parent Product Name</label>
    <type>Text</type>
</CustomField>