force-app/main/default/objects/vlocity_ps__ProductChildItem__c/fields/vlocity_ps__Quantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Default Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>