force-app/main/default/objects/vlocity_ps__ProductChildItem__c/validationRules/vlocity_ps__Default_greater_than_Min.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__Default_greater_than_Min</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ps__MinQuantity__c  &gt;  vlocity_ps__Quantity__c</errorConditionFormula>
    <errorDisplayField>vlocity_ps__Quantity__c</errorDisplayField>
    <errorMessage>Default Quantity must be greater than or equal to Min Quantity</errorMessage>
</ValidationRule>