force-app/main/default/objects/vlocity_ps__ProductChildItem__c/validationRules/vlocity_ps__Default_less_than_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__Default_less_than_Max</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ps__Quantity__c  &gt;  vlocity_ps__MaxQuantity__c</errorConditionFormula>
    <errorDisplayField>vlocity_ps__Quantity__c</errorDisplayField>
    <errorMessage>Default Quantity must be less than or equal to Max Quantity</errorMessage>
</ValidationRule>