force-app/main/default/objects/vlocity_ps__ProductChildItem__c/validationRules/vlocity_ps__Min_child_greater_than_Max_child_item.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__Min_child_greater_than_Max_child_item</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ps__MinimumChildItemQuantity__c &gt;  vlocity_ps__MaximumChildItemQuantity__c</errorConditionFormula>
    <errorMessage>Min Children Quantity must be less than or equal to Max Children Quantity</errorMessage>
</ValidationRule>