force-app/main/default/objects/vlocity_ps__ProductChildItem__c/validationRules/vlocity_ps__ParentProduct_cannot_be_ChildProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_ps__ParentProduct_cannot_be_ChildProduct</fullName>
    <active>true</active>
    <errorConditionFormula>vlocity_ps__ParentProductId__c == vlocity_ps__ChildProductId__c</errorConditionFormula>
    <errorDisplayField>vlocity_ps__ChildProductId__c</errorDisplayField>
    <errorMessage>Parent Product cannot be added as Child Product</errorMessage>
</ValidationRule>